--- a/templates/posts.html
+++ b/templates/posts.html
@@ -30,7 +30,7 @@
         <img class="menu_icon js-menu-icon" src="{% static 'img/menu.png' %}" />
         <div class="menu">
           <a href="/delete/{{ post.id }}/">Delete</a><br />
-          <a href="/edit/{{post.id}}">Edit</a>
+          <a href="/edit/{{post.id}}/">Edit</a>
         </div>
         <div class="logo">
           <img src="{% static 'img/profilepicture.jpg' %}" />
