--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,7 +6,7 @@
 <section class="content">
   <section class="post_form">
     <form
-      action="/edit/{{post.id}}/"
+      action="/edit/{{posts.id}}/"
       method="POST"
       enctype="multipart/form-data"
     >
